Endpoint added for viewing researches
